--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   shared_preferences: ^2.2.0
   firebase_auth: ^4.7.0
   font_awesome_flutter: ^10.5.0
+  google_sign_in: ^6.1.4
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
@@ -66,7 +68,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/images/logo1.png
-  #   - images/a_dot_ham.jpeg
+     - assets/images/google.png
+     - assets/images/github.png
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
